# air-quality-brazil

./: .gitignore  README.md  SCHEMA.md  pyproject.toml
notebooks/: 01_data_collection.ipynb  01_inmet_collection.ipynb  02_cleaning_merging.ipynb  02_inment_cleaning.ipynb  02_inmet_cleaning.ipynb  03_eda.ipynb  03_inmet_eda.ipynb  04_hotspots_cleaning.ipynb  05_hotspots_eda.ipynb  06_sisam_cleaning.ipynb  07_sisam_eda.ipynb  08_integration_eda.ipynb  09_modeling.ipynb
powerbi/: dashboard.pbix
