[project]
name = "air-quality-brazil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
